[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
pretty_env_logger = "0.5.0"
env_logger = "0.11.3"
log = "0.4.14"
mysql = "25.0.0"
async-std = "1.10.0"
tokio = { version = "1.0", features = ["full"] }
mysql_async = { version = "*", default-features = false, features = ["minimal"]}